Restructured the project folder contents.

--- a/testing-github-project-atelier-python/.project
+++ b/testing-github-project-atelier-python/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>testing_atelier_python</name>
+	<name>testing-github-project-atelier-python</name>
 	<comment></comment>
 	<projects>
 	</projects>
